--- a/Website/css/miv.css
+++ b/Website/css/miv.css
@@ -1,4 +1,26 @@
+.comments_region
+{
+	margin-bottom: 25px;
+}
+
+.comments_region
+{
+	padding: 5px;
+	margin-top: 5px;
+	margin-bottom: 25px;
+	background-color: #eeeeee;
+	border-radius: 5px;
+}
+
 .diary_video
 {
-	margin-bottom: 20px;
+	width: 100%;
+	margin-bottom: 25px;
 }
+
+.discuss_media
+{
+	width: 100%;
+	padding-bottom: 25px;
+}
+
