--- a/Website/css/miv.css
+++ b/Website/css/miv.css
@@ -12,10 +12,20 @@
 	border-radius: 5px;
 }
 
+.comments_name_badge
+{
+	background-color: #428bca;
+}
+
 .diary_video
 {
 	width: 100%;
-	margin-bottom: 25px;
+	padding-bottom: 25px;
+}
+
+.discuss_audio
+{
+	margin-top: 25px;
 }
 
 .discuss_media
@@ -24,3 +34,52 @@
 	padding-bottom: 25px;
 }
 
+.gallery_comment_number_badge
+{
+	z-index=100; 
+	position:absolute; 
+	margin: 5px; 
+	background-color: #428bca;
+}
+
+.gallery_audio_comment_number_badge
+{
+	margin-top: 1px;
+	margin-left: 2px;
+	margin-right: 5px;
+	background-color: #428bca;
+}
+
+.gallery_audio_icon
+{
+	margin-top: 2px;
+	margin-left: 5px;
+}
+
+.gallery_upload_error
+{
+	color: red;
+}
+
+.login_checkbox
+{
+	line-height:22px; 
+	padding: 15px 15px 15px 0px;
+}
+
+.login_container
+{
+	text-align: left; 
+	margin: auto; 
+	width: 50%
+}
+
+.login_error
+{
+	color: red;
+}
+
+.login_input
+{
+	width: 100%;
+}
