--- a/Something just happened/SomethingJustHappened/MainWindow.xaml
+++ b/Something just happened/SomethingJustHappened/MainWindow.xaml
@@ -1,34 +1,14 @@
 ﻿<Window x:Class="SomethingJustHappened.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        KeyDown="Window_KeyDown_1"
+        MouseDown="Window_MouseDown_1"
+        WindowState="Maximized"
+        WindowStyle="None">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <ComboBox Name="VideoDevices" Grid.Column="0" Margin="5, 5, 5, 0" SelectionChanged="VideoDevices_SelectionChanged" />
-            <ComboBox Name="AudioDevices" Grid.Column="1" Margin="0, 5, 5, 0" SelectionChanged="AudioDevices_SelectionChanged"/>
-        </Grid>
-        
-        <Button Name="StartButton" Grid.Row="1" Click="StartButton_Click" Margin="5, 5, 5, 0">
-            Start
-        </Button>
-
-        <Button Name="StopButton" Grid.Row="2" Click="StopButton_Click" Margin="5, 5, 5, 0" IsEnabled="False">
-            Stop
-        </Button>
-
-        <Button Name="ClickButton" Grid.Row="3" Click="ClickButton_Click" Margin="5, 5, 5, 5" IsEnabled="False">
-            Click
-        </Button>
+        <Label Name="ClickedLabel" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" Visibility="Hidden">
+            Clicked
+        </Label>
     </Grid>
 </Window>
