--- a/Something just happened/SomethingJustHappened/MainWindow.xaml
+++ b/Something just happened/SomethingJustHappened/MainWindow.xaml
@@ -2,12 +2,24 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525"
-        KeyDown="Window_KeyDown_1"
-        MouseDown="Window_MouseDown_1"
-        WindowState="Maximized"
-        WindowStyle="None">
+        KeyUp="Window_KeyDown_1"
+        MouseDown="Window_MouseDown_1">
+        <!--WindowState="Maximized"
+        WindowStyle="None"-->
     <Grid>
-        <Label Name="ClickedLabel" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" Visibility="Hidden">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" IsHitTestVisible="False" Name="AudioDeviceLabel" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Label Grid.Row="1" IsHitTestVisible="False" Name="VideoDeviceLabel" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        
+        <Label Grid.Row="2" IsHitTestVisible="False" Visibility="Hidden" Name="RecordingLabel" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center">
+            Recording
+        </Label>
+        <Label Grid.Row="3" Name="ClickedLabel" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" Visibility="Hidden" FontSize="24">
             Clicked
         </Label>
     </Grid>
