--- a/Something just happened/SomethingJustHappened/MainWindow.xaml
+++ b/Something just happened/SomethingJustHappened/MainWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525"
         KeyUp="Window_KeyDown_1"
-        MouseDown="Window_MouseDown_1">
-        <!--WindowState="Maximized"
-        WindowStyle="None"-->
+        MouseDown="Window_MouseDown_1"
+        WindowState="Maximized"
+        WindowStyle="None">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
