--- a/Something just happened/SomethingJustHappened/MainWindow.xaml
+++ b/Something just happened/SomethingJustHappened/MainWindow.xaml
@@ -12,6 +12,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Label Grid.Row="0" IsHitTestVisible="False" Name="AudioDeviceLabel" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Label Grid.Row="1" IsHitTestVisible="False" Name="VideoDeviceLabel" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -22,5 +23,7 @@
         <Label Grid.Row="3" Name="ClickedLabel" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" Visibility="Hidden" FontSize="24">
             Clicked
         </Label>
+
+        <Label Grid.Row="4" Name="ProcessorLabel" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" Visibility="Visible" FontSize="24" />
     </Grid>
 </Window>
