--- a/PromptingDiaryRoom/PromptingDiaryRoom/DiaryContentPage.xaml
+++ b/PromptingDiaryRoom/PromptingDiaryRoom/DiaryContentPage.xaml
@@ -14,12 +14,11 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Name="PromptLabel" FontSize="18" HorizontalAlignment="Center" Margin="25">
-            Look at the picture below. What does it remind you of?
-        </Label>
+        <Label Grid.Row="0" Name="PromptLabel" FontSize="24" HorizontalAlignment="Center" Margin="25" />
+
         <Grid Grid.Row="1" Name="MediaContentGrid">
             <Image Name="ImageViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed" />
-            <!--<Video Name="ImageViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed" />-->
+            <MediaElement Name="VideoPlayer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed" LoadedBehavior="Play" />
         </Grid>
         <Button Name="NextButton" Grid.Row="2" HorizontalAlignment="Center" Margin="25" Padding="10" FontSize="16" Click="NextButton_Click_1">
             Next
