--- a/PromptingDiaryRoom/PromptingDiaryRoom/MainWindow.xaml
+++ b/PromptingDiaryRoom/PromptingDiaryRoom/MainWindow.xaml
@@ -5,5 +5,8 @@
         Height="600"    
         Width="800"
         Source="WelcomePage.xaml"
-        ShowsNavigationUI="False">
+        ShowsNavigationUI="False"
+        WindowState="Maximized"
+        WindowStyle="None"
+        KeyUp="NavigationWindow_KeyUp_1">
 </NavigationWindow>
